Fix - White bar on the right side of page on smaller resolutions

--- a/src/main/webapp/styles/css/footer.css
+++ b/src/main/webapp/styles/css/footer.css
@@ -14,11 +14,8 @@
     text-align: center;
 }
 
-/* Lastly, apply responsive CSS fixes as necessary */
 @media (max-width: 767px) {
     #footer {
-        margin-left: -20px;
-        margin-right: -20px;
         padding-left: 20px;
         padding-right: 20px;
     }
